SERVER-46008 Fix so logging works during global shutdown